--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^2.8.0",
-    "sass": "^1.63.6",
-    "tailwindcss": "^3.3.2"
+    "@astrojs/tailwind": "^4.0.0",
+    "astro": "^2.9.2",
+    "sass": "^1.64.1",
+    "tailwind": "^4.0.0",
+    "tailwindcss": "^3.3.3"
   }
 }
