--- a/package.json
+++ b/package.json
@@ -11,9 +11,15 @@
   },
   "dependencies": {
     "@astrojs/tailwind": "^4.0.0",
+    "@astrojs/vue": "^2.2.1",
     "astro": "^2.9.2",
     "sass": "^1.64.1",
     "tailwind": "^4.0.0",
-    "tailwindcss": "^3.3.3"
+    "tailwindcss": "^3.3.3",
+    "vite": "^4.4.7",
+    "vue": "^3.3.4"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.26.0"
   }
 }
