--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@astrojs/sitemap": "^3.0.0",
     "@astrojs/tailwind": "^5.0.0",
     "@astrojs/vue": "^3.0.0",
+    "@babel/core": "^7.23.2",
     "astro": "^3.0.8",
+    "pnpm": "^8.9.2",
     "sass": "^1.66.1",
     "tailwind": "^4.0.0",
     "tailwindcss": "^3.3.3",
@@ -21,6 +23,7 @@
     "vue": "^3.3.4"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0"
+    "babel-cli": "^6.26.0",
+    "typescript": "^5.2.2"
   }
 }
