--- a/package.json
+++ b/package.json
@@ -10,20 +10,20 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/sitemap": "^3.0.0",
-    "@astrojs/tailwind": "^5.0.0",
-    "@astrojs/vue": "^3.0.0",
-    "@babel/core": "^7.23.2",
-    "astro": "^3.0.8",
-    "pnpm": "^8.9.2",
-    "sass": "^1.66.1",
+    "@astrojs/sitemap": "^3.0.3",
+    "@astrojs/tailwind": "^5.0.4",
+    "@astrojs/vue": "4.0.5",
+    "@babel/core": "^7.23.6",
+    "astro": "4.0.7",
+    "pnpm": "^8.13.1",
+    "sass": "^1.69.5",
     "tailwind": "^4.0.0",
-    "tailwindcss": "^3.3.3",
-    "vite": "^4.4.9",
-    "vue": "^3.3.4"
+    "tailwindcss": "^3.4.0",
+    "vite": "^4.5.1",
+    "vue": "^3.3.13"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
-    "typescript": "^5.2.2"
+    "typescript": "^5.3.3"
   }
 }
